# LexiorGpt1

./: .gitignore  .mcp.json  README.md  dataset_eda.ipynb  deploy_runpod.py  pytest.ini  requirements.txt  run_pipeline.sh
.claude/: launch.json
Phase1_Data_Preparation/: .gitignore  README.md  a2aj_cleaner.py  api_cost.py  ccq_cleaner.py  dataset_formatter.py  deploy_dual_pods.py  deploy_generation_runpod.py  deploy_teacher_runpod.py  generate_ccq_data.py  generate_identity_data.py  generate_tool_calling_data.py  generator_a2aj.py  identity_policy.py  identity_templates.py  legisquebec_scraper.py  push_corpus_to_hf.py  push_to_hf.py  pyproject.toml  resume_from_hf.py  run_generation.sh  test_ccq_cleaner.py
Phase1_Data_Preparation/agentic_generation/: __init__.py  __main__.py  acceptance.py  agentic_critic.py  anchor_bank.py  case_law_gate.py  cli.py  config.py  critic_context.py  critic_profiles.py  error_codes.py  fixtures.py  legal_critic.py  legal_rag.py  mcp_executor.py  migration.py  orchestrator.py  planner_agent.py  prompts.py  publisher.py  response_verifier.py  scenario_generator.py  schemas.py  storage.py  taxonomy.py  teacher_client.py  tool_catalog.py  training_formatter.py  trajectory_agent.py  validators.py
Phase1_Data_Preparation/configs/: agentic_generation.yaml  gpt4o_pipeline_test.yaml  qwen_full.yaml  qwen_teacher_gpt4o_critic.yaml
Phase1_Data_Preparation/docs/: migration-map.md  runtime-paths.md
Phase1_Data_Preparation/identity/: generate_commonsense_data.py  generate_graph_data.py  generate_identity_data.py  generate_sherlock_data.py
(+247 files in other folders)
